argocd/manifests/media-services/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8096
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config

            - mountPath: /cache
              name: jellyfin-cache

            - name: jellyfin-data
              mountPath: /media
      volumes:
        - name: jellyfin-config
          hostPath:
            path: /var/lib/jellyfin/config
            type: DirectoryOrCreate
        - name: jellyfin-cache
          hostPath:
            path: /var/lib/jellyfin/cache
            type: DirectoryOrCreate
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: smb-pvc
