argocd/manifests/media-services/jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media-system
spec:
  selector:
    app: jellyfin
  ports:
    - port: 80
      targetPort: 8096
