argocd/manifests/media-services/jellyfin/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media-system
  annotations:
    gethomepage.dev/href: "http://jellyfin.clusterlab.cc"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Media server for streaming movies, TV shows, music, and more."
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/pod-selector: "app=jellyfin"

    gethomepage.dev/widget.type: "jellyfin"
    gethomepage.dev/widget.url: "https://jellyfin.clusterlab.cc"
    gethomepage.dev/widget.key: "ae8e9dcf24b1438ba751f9881be859be"
    gethomepage.dev/widget.enableBlocks: "true"
    gethomepage.dev/widget.enableNowPlaying: "true"
    gethomepage.dev/widget.enableUser: "true"
    gethomepage.dev/widget.enableMediaControl: "true"
    gethomepage.dev/widget.showEpisodeNumber: "true"
    gethomepage.dev/widget.expandOneStreamToTwoRows: "true"

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.clusterlab.cc`)
      kind: Rule
      services:
        - name: jellyfin
          port: 80
  tls:
    secretName: jellyfin-clusterlab-cc-tls
